resolved getNotes bugs
